@@ -1,3 +1,6 @@
+2013-10-20  Kirit Saelensminde  <kirit@felspar.com>
+ The spider now tries more types of link including script and img elements.
+
 2012-11-07  Kirit Saelensminde  <kirit@felspar.com>
  Fixed an order-of-destruction problem in the in-process Python host that showed up on Ubuntu Quantal/Python 2.7.
 
